--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,7 @@
-name: CalledWorkFlow
+name: build-workflow
 
 on:
   workflow_dispatch:
-#    inputs:
-#      calledworflow_name:
-#        description: 'Name of the workflow to trigger'
-#        required: true
-#        default: 'playwright-general'
-#
-#      calledworkflow_github_account:
-#        description: 'Github account owner'
-#        required: true
-#        default: 'infopulse'
-#
-#      calledworkflow_repo:
-#        description: 'Repository of the workflow to trigger'
-#        required: true
-#        default: 'Playwright-course-python'
   push:
   pull_request:
 
@@ -30,15 +15,13 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const repo = 'infopulse/Playwright-course-python';
-          const eventType = 'build_completed';
           const clientPayload = { event_type: 'build_completed' };
 
           const response = await github.rest.repos.createDispatchEvent({
-            owner: repo.split('/')[0],
-            repo: repo.split('/')[1],
-            event_type: eventType,
-            client_payload: clientPayload,
+            owner: 'infopulse',
+            repo: 'Playwright-course-python',
+            event_type: 'on-demand-test',
+            client_payload: {build : 'ok'},
           });
 
           console.log(response);
